# project-mario

./: .env.example  .gitignore  Dockerfile  config.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: __init__.py  cli.py  extensions.py
app/api/: __init__.py  auth.py  courses.py  tiles.py  users.py
app/data/: tiles.json
app/forms/: auth.py  course.py  tile.py
app/models/: __init__.py  course.py  tile.py  user.py
app/static/css/: builder.css  style.css
app/static/js/: builder.js
app/templates/: base.html
app/templates/auth/: login.html  register.html
app/templates/courses/: build.html  create.html  detail.html  index.html
app/templates/main/: dashboard.html  index.html
app/templates/tiles/: create.html  detail.html  index.html  print.html
app/utils/: barcode.py  barcode_image.py
app/web/: __init__.py  auth.py  courses.py  main.py  tiles.py
migrations/versions/: 2e348ead6839_add_tile_table.py  ac2fcea77579_add_user_table.py  c032ba2bd368_add_plate_type_to_course_and_plate_.py  d7b8e3e9291c_add_course_and_course_tile_tables.py
tests/: conftest.py  test_api.py  test_barcode.py  test_config.py  test_course_api.py  test_course_model.py  test_course_web.py  test_models.py  test_tile_api.py  test_tile_model.py  test_tile_web.py  test_web_auth.py
