[project]
name = "project-mario"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0",
    "Flask-SQLAlchemy>=3.1",
    "Flask-Migrate>=4.0",
    "Flask-Login>=0.6",
    "Flask-WTF>=1.2",
    "email-validator>=2.0",
    "python-dotenv>=1.0",
    "Pillow>=10.0",
    "gunicorn>=22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py311"
line-length = 88
